add review options

--- a/employemanage/package.json
+++ b/employemanage/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@ng-select/ng-select": "^13.8.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "employemanage": "file:",
